...
                      .textTheme
                      .labelLarge
                      ?.copyWith(color: colorScheme.onSurfaceVariant),
                ),
                const Spacer(),
                Text(
                  'Swipe up to love it',
                  style: Theme.of(context)
                      .textTheme
                      .labelMedium
                      ?.copyWith(color: colorScheme.onSurfaceVariant),
                ),
              ],
...
